FMC imports added

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="B787_10_FMC.css" />
+﻿<link rel="stylesheet" href="B787_10_FMC.css"/>
 
 <script type="text/html" id="B787_10_FMC">
     <glasscockpit-highlight id="highlight"></glasscockpit-highlight>
@@ -14,12 +14,12 @@
                     </div>
                 </div>
                 <div class="fms-side-container left">
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
                 </div>
                 <div class="fms-side-container-mark left">
                     <div class="fms-mark"></div>
@@ -122,51 +122,60 @@
                     <div class="fms-mark"></div>
                 </div>
                 <div class="fms-side-container right">
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
-                    <input class="fms-button side" type="button" />
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
+                    <input class="fms-button side" type="button"/>
                 </div>
                 <div class="fms-io-buffer text-area"></div>
                 <div class="fms-button-container">
-                    <input class="fms-button page-button fms-init-ref active" value="INIT REF" type="button" />
-                    <input class="fms-button page-button fms-rte active" value="RTE" type="button" />
-                    <input class="fms-button page-button fms-dep-arr active" value="DEP ARR" type="button" />
-                    <input class="fms-button page-button fms-altn active" value="ALTN" type="button" />
-                    <input class="fms-button page-button fms-vnav active" value="VNAV" type="button" />
-                    <input class="fms-button page-button fms-empty" value="" type="button" />
-                    <input class="fms-button page-button fms-empty" value="" type="button" />
-                    <input class="fms-button page-button fms-exec active" value="EXEC" type="button" />
-                    <input class="fms-button page-button fms-fix active" value="FIX" type="button" />
-                    <input class="fms-button page-button fms-legs active" value="LEGS" type="button" />
-                    <input class="fms-button page-button fms-hold active" value="HOLD" type="button" />
-                    <input class="fms-button page-button fms-fmc-comm active" value="FMC COMM" type="button" />
-                    <input class="fms-button page-button fms-prog active" value="PROG" type="button" />
-                    <input class="fms-button page-button fms-empty" value="" type="button" />
-                    <input class="fms-button page-button fms-empty" value="" type="button" />
-                    <input class="fms-button page-button fms-empty" value="" type="button" />
-                    <input class="fms-button page-button fms-nav-rad active" value="NAV RAD" type="button" />
-                    <input class="fms-button page-button fms-ofst active" value="OFST" type="button" />
-                    <input class="fms-button page-button fms-rta active" value="RTA" type="button" />
-                    <input class="fms-button page-button fms-empty" value="" type="button" />
-                    <input class="fms-button page-button fms-empty" value="" type="button" />
-                    <input class="fms-button page-button fms-empty" value="" type="button" />
-                    <input class="fms-button page-button fms-prev-page active" value="PREV PAGE" type="button" />
-                    <input class="fms-button page-button fms-next-page active" value="NEXT PAGE" type="button" />
+                    <input class="fms-button page-button fms-init-ref active" value="INIT REF" type="button"/>
+                    <input class="fms-button page-button fms-rte active" value="RTE" type="button"/>
+                    <input class="fms-button page-button fms-dep-arr active" value="DEP ARR" type="button"/>
+                    <input class="fms-button page-button fms-altn active" value="ALTN" type="button"/>
+                    <input class="fms-button page-button fms-vnav active" value="VNAV" type="button"/>
+                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-exec active" value="EXEC" type="button"/>
+                    <input class="fms-button page-button fms-fix active" value="FIX" type="button"/>
+                    <input class="fms-button page-button fms-legs active" value="LEGS" type="button"/>
+                    <input class="fms-button page-button fms-hold active" value="HOLD" type="button"/>
+                    <input class="fms-button page-button fms-fmc-comm active" value="FMC COMM" type="button"/>
+                    <input class="fms-button page-button fms-prog active" value="PROG" type="button"/>
+                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-nav-rad active" value="NAV RAD" type="button"/>
+                    <input class="fms-button page-button fms-ofst active" value="OFST" type="button"/>
+                    <input class="fms-button page-button fms-rta active" value="RTA" type="button"/>
+                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-empty" value="" type="button"/>
+                    <input class="fms-button page-button fms-prev-page active" value="PREV PAGE" type="button"/>
+                    <input class="fms-button page-button fms-next-page active" value="NEXT PAGE" type="button"/>
                     <div class="fms-exec-light"></div>
                 </div>
             </div>
             <div class="fms-split"></div>
             <svg id="fms-pointer" width="100" height="100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-                <path fill="none" stroke="magenta" stroke-width="5" d="M40 10 L40 40 L10 40 M60 10 L60 40 L90 40 M10 60 L40 60 L40 90 M60 90 L60 60 L90 60" />
+                <path fill="none" stroke="magenta" stroke-width="5"
+                      d="M40 10 L40 40 L10 40 M60 10 L60 40 L90 40 M10 60 L40 60 L40 90 M60 90 L60 60 L90 60"/>
             </svg>
         </div>
     </div>
 </script>
 
 <script type="text/html" import-script="/JS/SimPlane.js"></script>
+
+<!-- WT files -->
+<script type="text/html" import-script="/WTPages/WTLibs/WT_SimPlaneMod.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/DataStore.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/LzUtf8.js"></script>
+<script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
+<!-- WT files END -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
 
@@ -175,10 +184,12 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/Waypoint.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/Approach.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/WaypointLoader.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/FlightPlanManager.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/FlightPlanManager.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/FlightElements/GeoCalc.js"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/NavSystem.js"></script>
 
@@ -187,20 +198,36 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/Boeing/Boeing_FMC.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/FMC/FMCDataManager.js"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_IdentPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_InitRefIndexPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_PosInitPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_PerfInitPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_ThrustLimPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_TakeOffRefPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_ApproachPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_MaintPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_RoutePage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_DepArrPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_NavRadioPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_ProgressPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_FMCCommPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_LegsPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_SelectWptPage.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_VNAVPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_IdentPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_InitRefIndexPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_PosInitPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_PerfInitPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_ThrustLimPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_TakeOffRefPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_ApproachPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_MaintPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_RoutePage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_DepArrPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_NavRadioPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_ProgressPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_FMCCommPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_LegsPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_SelectWptPage.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC_VNAVPage.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.js"></script>
